--- a/src/main/resources/archetype-resources/Dockerfile
+++ b/src/main/resources/archetype-resources/Dockerfile
@@ -1,6 +1,6 @@
-FROM rmpestano/wildfly:11.0.0
+FROM rmpestano/wildfly:16.0.0
 MAINTAINER Rafael Pestano
 
 COPY ./docker/standalone.conf ${WILDFLY_HOME}/bin/
 
-COPY ./target/admin-starter.war ${DEPLOYMENT_DIR}
+COPY ./target/${artifactId}.war ${DEPLOYMENT_DIR}
