--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.adminfaces</groupId>
     <artifactId>admin-starter-persistence-archetype</artifactId>
-    <version>1.0.0.2</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
 
     <name>admin-starter-persistence-archetype</name>
